<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgkeluhan">


    <EditText
        android:id="@+id/edt_pengaduan"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:contentDescription="@string/content_desc_pengaduan"
        android:ems="10"
        android:text="@string/content_desc_pengaduan_text"
        android:textColor="#878686"
        android:textColorHint="#878686"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59"
        tools:ignore="LabelFor,EditableContentDescCheck,EditableContentDescCheck" />

    <Button
        android:id="@+id/btn_keluhan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_desc_kirim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/content_desc_kirim_text"
        android:backgroundTint="#F7C01F"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_pengaduan"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>