<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg">


    <EditText
        android:id="@+id/input_email"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/style_emailpw"
        android:ems="10"
        android:hint="@string/content_desc_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.539"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@drawable/style_emailpw"
        android:hint="@string/content_desc_enter_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email"
        app:layout_constraintVertical_bias="0.043"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_desc_btn_login"
        android:backgroundTint="#2C503B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        app:layout_constraintVertical_bias="0.057" />

</androidx.constraintlayout.widget.ConstraintLayout>